--- a/WhiteLagoonWeb/appsettings.json
+++ b/WhiteLagoonWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SqlExpress; Database=WhiteLagoon; Trusted_Connection=true; TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
